# python-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/actions/: setup.yml
.github/setup/: action.yml
.github/workflows/: ci.yaml
app/app/: settings.py
app/core/management/commands/: wait_for_db.py
app/core/tests/: test_commands.py
