[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Álvaro Fernández <alvarofm77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.4"
djangorestframework = "3.12.4"
psycopg2 = "2.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"
flake8-pyproject = "^1.2.2"
mypy = "1.0.1"
pre-commit = "^3.1.1"
django-stubs = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    "venv",
    "app/migrations",
    "app/__pycache__",
    "app/manage.py",
    "app/settings.py"
]
max-line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

# [tool.django-stubs]
# django_settings_module = "app.settings"
