[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Álvaro Fernández <alvarofm77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.4"
djangorestframework = "3.12.4"
psycopg2 = "2.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"
flake8-pyproject = "^1.2.2"
mypy = "1.0.1"
pre-commit = "^3.1.1"
django-stubs = "^1.15.0"
types-psycopg2 = "^2.9.21.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv"
]

[tool.flake8]
exclude = [
    "venv"
]
max-line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
strict = true
